# pret

./: .gitignore  README.md  changelog.md  galata_config.py  mkdocs.yml  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.github/workflows/: docs.yml  release.yml  tests.yml
binder/: postBuild  start
client/: appLoader.ts  cborDecoder.js  deserialize.py  globals.ts  org.transcrypt.__runtime__.js  routing.tsx  store.ts
client/jupyter/: keep-hidden-cell-output.ts  manager.ts  plugin.tsx  style.css  widget.tsx
client/standalone/: index.ejs  index.tsx
docs/: index.md
docs/scripts/: pret_snippet_renderer.py
docs/tutorials/: connection-status.ipynb  create-your-first-component.md  index.md  interacting-with-the-server.md  sharing-state.ipynb  sharing-state.md  tictactoe.ipynb  tictactoe.md  widgets.md
examples/: Todos.ipynb
latest/: 404.html  index.html  objects.inv
latest/assets/: 115.31e9463dc09858cef125.js  228.ec90f324609d6bad58bc.js  243.56783a0f0a7726c01b25.js  366.f70d8d00e8f0bc4a75d5.js  45.a1eb8c606373bc77c3dc.js  520.90f0b0357ae18439d5cf.js  661.163b7c1d6d3c3f2b9625.js  661.2ea04899300bff6b9ff9.js  661.682d693d8f832e61497f.js  661.88ebc7daffc52b5806fd.js  661.e3d74840c84abaa52e08.js  661.ef577f9abf642bcc23ce.js  680.2b11a280757b2a3edf40.js  778.b6f9afbbc5ce792fd1a6.js  81.7928e1bf8f3182914a24.js  848.1f148485397ecdeae828.js  bundle.007bdb557577f41a31c7.pkl  bundle.0091207f3d05be4ddc91.pkl  bundle.01a180c4f7cf1b3eb5cc.pkl  bundle.02b62be7e1b861744751.pkl  bundle.0315da5294ed56e46566.pkl  bundle.053540afaf0a90924bbd.pkl  bundle.05752a187856fd32ad00.pkl  bundle.05855cae1c52295a7e83.pkl  bundle.060a05e027a0f76464b7.pkl  bundle.06b99abc4fd72d9ccc32.code.js  bundle.070f95928b387b69e412.pkl  bundle.07b00c4d26c0a755fad5.pkl  bundle.07c84a1aec5db985fd41.code.js  bundle.07fad7044ef397fa0a17.code.js  bundle.082d315c5a7090d37600.cbor  bundle.0851a626368012d33cc0.pkl  bundle.09df16d628d8ec32d117.pkl  bundle.0c4f6452230996cfa8f0.pkl  bundle.0c6a0de2a4134e1c6071.pkl  bundle.0cb75c79a0d72cda6358.pkl  bundle.0cd0d09bca07aa5fc8e3.pkl  bundle.0d5fe0f328a5dc159b11.code.js  bundle.10296159e7aac66beeb5.pkl  bundle.1036c04c6e01ec3ae2d5.pkl  (+286 more)
latest/changelog/: index.html
latest/search/: search_index.json
latest/tutorials/: connection-status.ipynb  create-your-first-component.ipynb  from-notebook-to-app.ipynb  index.html  sharing-state.ipynb  tictactoe.ipynb
main/: 404.html  index.html  objects.inv
main/assets/: 214.b394d3cc26b5e60f6ace.js  366.28f96cac1c270d0b8a7d.js  443.a200ec56d3eae004e9c1.js  577.8a8533b473d60a09d72d.js  579.565114bd7ec827142f42.js  579.cb78fb9e7fe7b1f46c0c.js  661.079045084511ead40371.js  661.91c106bbedce8e4cf20e.js  661.c551b7c63c12ff5c4c8c.js  661.e7867302a939ea0d4db7.js  680.89b7b3b750d790ef1553.js  707.58d2258daa22d5b109e2.js  778.20bcfc2846c176173588.js  bundle.005d7f8fd1052d315080.pkl  bundle.00883467e0f22623287d.pkl  bundle.0456904aabbf970a6837.pkl  bundle.049798a78db32f3d58b3.pkl  bundle.059a282dd41b02dc5145.pkl  bundle.062f05302759b963cc72.pkl  bundle.067b0a3bf5aab2f136a4.cbor  bundle.067b0a3bf5aab2f136a4.code.js  bundle.06b99abc4fd72d9ccc32.cbor  bundle.06c5e9d463753c581ac8.pkl  bundle.07beb5e65ab10f4ab4ef.pkl  bundle.07c84a1aec5db985fd41.cbor  bundle.07fad7044ef397fa0a17.cbor  bundle.082d315c5a7090d37600.code.js  bundle.08fb956b889bc77d878c.pkl  bundle.09440b5e673981f4827a.pkl  bundle.0a9f50964c846e8fcb14.pkl  bundle.0cd94843b6cf7973990e.pkl  bundle.0d5fe0f328a5dc159b11.cbor  bundle.100dab58acaa097c0ae9.pkl  bundle.1039ab84ccfcfa9e2ed6.pkl  bundle.1039d1fbe5f131e1a501.cbor  bundle.1105f375b2092cafd82a.pkl  bundle.113b39ed509804457fef.pkl  bundle.1246da8789bbac473ca4.code.js  bundle.12606e0c7334674b8c2c.pkl  bundle.12e633024de4533e8b0a.code.js  (+289 more)
main/changelog/: index.html
main/search/: search_index.json
main/tutorials/: from-notebook-to-app.ipynb  index.html  interacting-with-the-server.ipynb  sharing-state.ipynb  widgets.ipynb
pret/: __init__.py  bridge.py  hooks.py  ipython_var_cleaner.py  main.py  manager.py  marshal.py  render.py  serialize.py  serve.py  settings.py  state.py  store.py  webpack.standalone.js
pret/cli/: __init__.py  (+2 more)
webpack/: webpack.config.js  webpack.jupyter.js
(+74 files in other folders)
